using EnergeticDevelopment.Utilities;

namespace EnergeticDevelopment.EnergyBase
{
    public abstract class Energy
    {
        protected abstract ResourceType Resource { get; }
    }
}