namespace EnergeticDevelopment.EnergyConsumers
{
    public class NewYork : EnergyConsumer
    {
        protected override decimal ConsumedEnergy => 10000;
    }
}