namespace EnergeticDevelopment.EnergyConsumers
{
    public class Poland : EnergyConsumer
    {
        protected override decimal ConsumedEnergy => 40000;
    }
}