namespace EnergeticDevelopment.EnergyConsumers
{
    public class World : EnergyConsumer
    {
        protected override decimal ConsumedEnergy => 6000000;
    }
}