namespace EnergeticDevelopment.Utilities
{
    public enum EnergyAsset
    {
        CoalMine,
        UraniumMine,
        MoonMine,
        HadronCollider,
        CoalPlant,
        SolarPlant,
        NuclearPlant,
        FusionPlant,
        AnnihilationPlant
    }
}