namespace EnergeticDevelopment.Utilities
{
    public enum ResourceType
    {
        Energy,
        Coal,
        Solar,
        Uranium,
        Helium,
        Antimatter
    }
}